--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "url": "https://github.com/cgjs/dns/issues"
   },
   "homepage": "https://github.com/cgjs/dns#readme",
-  "dependencies": {
-    "cgjs": "^0.1.3"
+  "devDependencies": {
+    "cgjs": "^0.1.9"
   }
 }
